<resources>
    <string name="app_name">Hiker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_hikes_list">There are no hikes till now, waiting for your hike :)</string>
    <string name="company_name">Enter the company name</string>
    <string name="current_ctc">Enter current CTC</string>
    <string name="expected_ctc">Enter Hike Amount</string>
    <string name="preview">Calculate Inhand</string>
    <string name="add_component">Add Component</string>
    <string name="tax_deduction_section">Tax Deductions</string>
    <string name="in_hand">Final Inhand</string>
    <string name="component_type">Component Type</string>
    <string name="component_name">Component Name</string>
    <string name="component_value">Component Amount</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="rupee">₹</string>
    <string-array name="component">
        <item name="part">Part of salary like allowances...</item>
        <item name="not_part">Not part of Salary like Shares,Funds...</item>
    </string-array>
    <string name="regime">Regime</string>
    <string name="new_regime">New Regime</string>
    <string name="old_regime">Old Regime</string>
    <string name="taxes">Taxes</string>
    <string name="hikepercentage">Hike Percentage</string>
    <string name="ctc">CTC  = </string>
    <string name="hikepercentagesmall">Hike  = </string>
    <string name="in_hand_only">In Hand</string>
    <string name="calculate_in_hand_only_alert">CALCULATE INHAND</string>
    <string name="cancel_alert">CANCEL</string>
    <string name="add_alert">ADD</string>
    <string name="delete_hiker">Do you want to really delete this hiker ?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="image_back_button">imagebackbutton</string>
    <string name="image_background">imagebackground</string>
    <string name="salary_info">This salary is excluded investment, Investing money will increase your inhand...</string>
    <string name="component_amount_error">Component Amount is not equal to CTC, Please make changes in component Amount</string>
    <string name="cantaddcomponent">You can\'t add component. "For Adding Component : You need to make an adjustment in the component list first"</string>
    <string name="error_dailog_ok">ok</string>
    <string name="delete_component">delete Component</string>
    <string name="remaining_component_text">Remaining Component Sum is</string>
    <string name="hike_percentage">Congratulations,Your Hike Percentage is</string>
</resources>